修改/使用手冊首頁/更新/底下的檔案

--- a/installation/upgrade_120.html
+++ b/installation/upgrade_120.html
@@ -55,11 +55,11 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Upgrading From Beta 1.0 to Final 1.2</h1>
+<h1>更新 Beta 1.0 到 Final 1.2</h1>
 
-<p>To upgrade to Version 1.2 please replace the following directories with the new versions:</p>
+<p>要升級到 Version 1.2 的話， 請把底下的目錄換上新的版本:</p>
 
-<p class="important"><strong>注意:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
 <ul>
 <li>drivers</li>
@@ -71,7 +71,7 @@
 <li>scaffolding</li>
 </ul>
 
-<p>Please also replace your local copy of the user guide with the new version.</p>
+<p>也請別忘了把 local 的使用手冊換上新的版本。</p>
 
 </div>
 <!-- END CONTENT -->
