--- a/installation/upgrade_141.html
+++ b/installation/upgrade_141.html
@@ -59,15 +59,15 @@
 <p class="important"><strong>注意:</strong> The instructions on this page assume you are running version 1.4.0.  If you
 have not upgraded to that version please do so first.</p>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在準備更新之前，你應該把 index.php 換成靜態檔，這樣即可暫時休站。</p>
 
 
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟一: 更新 CodeIgniter 檔案</h2>
 
 <p>Replace the following directories in your "system" folder with the new versions:</p>
 
-<p class="important"><strong>注意:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
 <ul>
 <li>codeigniter</li>
@@ -77,7 +77,7 @@ have not upgraded to that version please do so first.</p>
 </ul>
 
 
-<h2>Step 2: Update your config.php file</h2>
+<h2>步驟二: 更新 config.php 檔</h2>
 
 <p>Open your <dfn>application/config/config.php</dfn> file and add this new item:</p>
 
@@ -106,7 +106,7 @@ $config['compress_output'] = FALSE;
 
 
 
-<h2>Step 3: Rename an Autoload Item</h2>
+<h2>步驟三: Rename an Autoload Item</h2>
 
 <p>Open the following file: <dfn>application/config/autoload.php</dfn></p>
 
@@ -125,9 +125,9 @@ $config['compress_output'] = FALSE;
 
 
 
-<h2>Step 4: Update your user guide</h2>
+<h2>步驟四: 更新使用手冊</h2>
 
-<p>Please also replace your local copy of the user guide with the new version.</p>
+<p>也請別忘了把 local 的使用手冊換上新的版本。</p>
 
 </div>
 <!-- END CONTENT -->
