--- a/installation/upgrade_152.html
+++ b/installation/upgrade_152.html
@@ -60,13 +60,13 @@
 <p class="important"><strong>注意:</strong> The instructions on this page assume you are running version 1.5.0 或 1.5.1.  If you
 have not upgraded to that version please do so first.</p>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在準備更新之前，你應該把 index.php 換成靜態檔，這樣即可暫時休站。</p>
 
 
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟一: 更新 CodeIgniter 檔案</h2>
 
-<p>Replace these files and directories in your "system" folder with the new versions:</p>
+<p>把 system 目錄中的這些檔案換上新的版本:</p>
 
 <ul>
 
@@ -85,12 +85,12 @@ have not upgraded to that version please do so first.</p>
 <li><dfn>codeigniter/</dfn></li>
 </ul>
 
-<p class="important"><strong>注意:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
 
-<h2>Step 2: Update your user guide</h2>
+<h2>步驟二: 更新使用手冊</h2>
 
-<p>Please also replace your local copy of the user guide with the new version.</p>
+<p>也請別忘了把 local 的使用手冊換上新的版本。</p>
 
 </div>
 <!-- END CONTENT -->
