--- a/installation/upgrade_160.html
+++ b/installation/upgrade_160.html
@@ -57,13 +57,13 @@
 
 <h1>更新 1.5.4 到 1.6.0</h1>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在準備更新之前，你應該把 index.php 換成靜態檔，這樣即可暫時休站。</p>
 
 
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟一: 更新 CodeIgniter 檔案</h2>
 
-<p>Replace these files and directories in your "system" folder with the new versions:</p>
+<p>把 system 目錄中的這些檔案換上新的版本:</p>
 
 <ul>
 
@@ -75,12 +75,12 @@
 <li><dfn>system/language</dfn></li>
 </ul>
 
-<p class="important"><strong>注意:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
-<h2>Step 2: Add time_to_update to your config.php </h2>
+<h2>步驟二: Add time_to_update to your config.php </h2>
 <p>Add the following to system/application/config/config.php with the other session configuration options</p>
 <p><code>$config['sess_time_to_update'] 		= 300;</code></p>
-<h2>Step 3: Add $autoload['model']</h2>
+<h2>步驟三: Add $autoload['model']</h2>
 <p>Add the following to system/application/autoload.php</p>
 <p><code> /*<br />
 	| -------------------------------------------------------------------<br />
@@ -93,7 +93,7 @@
 	*/<br />
 	<br />
 	$autoload['model'] = array();</code></p>
-<h2>Step 4: Add  to your database.php </h2>
+<h2>步驟四: Add  to your database.php </h2>
 <p>Make the following changes to your system/application/config/database.php file:</p>
 <p>Add the following variable above the database configuration options，with <dfn>$active_group</dfn></p>
 <p><code>$active_record = TRUE;</code></p>
@@ -103,8 +103,8 @@
 <p><code>$db['default']['char_set'] = &quot;utf8&quot;;<br />
 $db['default']['dbcollat'] = &quot;utf8_general_ci&quot;;</code></p>
 
-<h2>Step 5: Update your user guide</h2>
-<p>Please also replace your local copy of the user guide with the new version.</p>
+<h2>步驟五: 更新使用手冊</h2>
+<p>也請別忘了把 local 的使用手冊換上新的版本。</p>
 
 </div>
 <!-- END CONTENT -->
