--- a/installation/upgrade_162.html
+++ b/installation/upgrade_162.html
@@ -57,13 +57,13 @@
 
 <h1>更新 1.6.1 到 1.6.2</h1>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在準備更新之前，你應該把 index.php 換成靜態檔，這樣即可暫時休站。</p>
 
 
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟一: 更新 CodeIgniter 檔案</h2>
 
-<p>Replace these files and directories in your "system" folder with the new versions:</p>
+<p>把 system 目錄中的這些檔案換上新的版本:</p>
 
 <ul>
 
@@ -74,18 +74,18 @@
 <li><dfn>system/libraries</dfn></li>
 </ul>
 
-<p class="important"><strong>注意:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
 
-<h2>Step 2: Encryption Key</h2>
+<h2>步驟二: Encryption Key</h2>
 <p>If you are using sessions，open up system/application/config/config.php and verify you've set an encryption key.</p>
 
-<h2>Step 3: Constants File</h2>
+<h2>步驟三: Constants File</h2>
 <p>Copy /system/application/config/constants.php to your installation，and modify if necessary.</p>
-<h2>Step 4: Mimes File</h2>
+<h2>步驟四: Mimes File</h2>
 <p>Replace /system/application/config/mimes.php with the dowloaded version. If you've added custom mime types，you'll need to re-add them.</p>
-<h2>Step 5: Update your user guide</h2>
-<p>Please also replace your local copy of the user guide with the new version.</p>
+<h2>步驟五: 更新使用手冊</h2>
+<p>也請別忘了把 local 的使用手冊換上新的版本。</p>
 
 </div>
 <!-- END CONTENT -->
