--- a/installation/upgrade_170.html
+++ b/installation/upgrade_170.html
@@ -57,13 +57,13 @@
 
 <h1>更新 1.6.3 到 1.7.0</h1>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在準備更新之前，你應該把 index.php 換成靜態檔，這樣即可暫時休站。</p>
 
 
 
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟一: 更新 CodeIgniter 檔案</h2>
 
-<p>Replace these files and directories in your "system" folder with the new versions:</p>
+<p>把 system 目錄中的這些檔案換上新的版本:</p>
 
 <ul>
 
@@ -74,10 +74,10 @@
 <li><dfn>system/libraries</dfn></li>
 </ul>
 
-<p class="important"><strong>注意:</strong> If you have any custom developed files in these folders please make copies of them first.</p>
+<p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
 
-<h2>Step 2: Update your Session Table</h2>
+<h2>步驟二: 更新 Session Table</h2>
 
 <p>If you are using the Session class in your application，AND if you are storing session data to a database，you must add a new column named <dfn>user_data</dfn> to your session table. 
 Here is an example of what this column might look like for MySQL:
@@ -91,7 +91,7 @@ Here is an example of what this column might look like for MySQL:
 <p>You'll find more information regarding the new Session functionality in the  <a href="../libraries/sessions.html">Session class</a> page.</p>
 
 
-<h2>Step 3: Update your Validation Syntax</h2>
+<h2>步驟三: 更新 Validation Syntax</h2>
 
 <p>This is an <strong>optional</strong>，but recommended step，for people currently using the Validation class.  CI 1.7 introduces a new  <a href="../libraries/form_validation.html">Form Validation class</a>，which 
 deprecates the old Validation library.  We have left the old one in place so that existing applications that use it will not break，but you are encouraged to
@@ -99,8 +99,8 @@ migrate to the new version as soon as possible.  Please read the user guide care
 
 
 
-<h2>Step 4: Update your user guide</h2>
-<p>Please replace your local copy of the user guide with the new version，including the image files.</p>
+<h2>步驟四: 更新使用手冊</h2>
+<p>請把 local 的使用手冊換上新的版本，也別忘了 image 檔案。</p>
 
 </div>
 <!-- END CONTENT -->
