--- a/libraries/config.html
+++ b/libraries/config.html
@@ -107,7 +107,7 @@ $this->config->load('<var>blog_settings</var>'，<kbd>TRUE</kbd>);</code>
 <code>$this->config->load('<var>blog_settings</var>'，<dfn>FALSE</dfn>，<kbd>TRUE</kbd>);</code>
 
 </li>
-<li><strong>Auto-loading</strong>
+<li><strong>自動載入</strong>
 
 <p>If you find that you need a particular config file globally，you can have it loaded automatically by the system.  To do this,
 open the <strong>autoload.php</strong> file，located at <samp>application/config/autoload.php</samp>，and add your config file as
