--- a/installation/upgrade_131.html
+++ b/installation/upgrade_131.html
@@ -57,14 +57,14 @@
  
 <h1>更新 1.3 到 1.3.1</h1>
  
-<p class="important"><strong>注意:</strong> The instructions on this page assume you are running version 1.3. If you
+<p class="important"><strong>注意:</strong> 本頁的更新步驟，都是假設你目前使用的是 version 1.3。. If you
 have not upgraded to that version please do so first.</p>
  
 <p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
  
  
  
-<h2>Step 1: Update your CodeIgniter files</h2>
+<h2>步驟一: 更新 CodeIgniter 檔案</h2>
  
 <p>Replace the following directories in your "system" folder with the new versions:</p>
  
@@ -79,7 +79,7 @@ have not upgraded to that version please do so first.</p>
 </ul>
  
  
-<h2>Step 2: Update your user guide</h2>
+<h2>步驟二: 更新使用手冊</h2>
  
 <p>Please also replace your local copy of the user guide with the new version.</p>
  
