--- a/installation/upgrade_132.html
+++ b/installation/upgrade_132.html
@@ -57,7 +57,7 @@
 
 <h1>更新 1.3.1 到 1.3.2</h1>
 
-<p class="important"><strong>注意:</strong> The instructions on this page assume you are running version 1.3.1.  If you
+<p class="important"><strong>注意:</strong> 本頁的更新步驟，都是假設你目前使用的是 version 1.3。.1.  If you
 have not upgraded to that version please do so first.</p>
 
 <p>在準備更新之前，你應該把 index.php 換成靜態檔，這樣即可暫時休站。</p>
