修改建立自己的程式庫

--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -85,12 +85,12 @@ nor can the Loader class in PHP 4.  All other classes are able to be replaced/ex
 they are initialized.</p>
 
 
-<h2>Naming Conventions</h2>
+<h2>命名規則</h2>
 
 <ul>
-<li>File names must be capitalized. For 參考範例:&nbsp; <dfn>Myclass.php</dfn></li>
-<li>Class declarations must be capitalized. For 參考範例:&nbsp;  <kbd>class Myclass</kbd></li>
-<li>Class names and file names must match.</li>
+<li>檔名第一個字母必須為大寫. 參考範例:&nbsp; <dfn>Myclass.php</dfn></li>
+<li>類別宣告第一個字母必須為大寫. 參考範例:&nbsp;  <kbd>class Myclass</kbd></li>
+<li>類別名稱與檔名必須相同.</li>
 </ul>
 
 
