修改 creat libraries

--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -65,7 +65,7 @@ and the global framework resources.</p>
 <p>As an added bonus，CodeIgniter permits your libraries to <kbd>extend</kbd> native classes if you simply need to add some functionality
 to an existing library. Or you can even replace native libraries just by placing identically named versions in your <dfn>application/libraries</dfn> folder.</p>
 
-<p>In summary:</p>
+<p>總結歸納:</p>
 
 <ul>
 <li>You can create entirely new libraries.</li>
@@ -79,10 +79,9 @@ to an existing library. Or you can even replace native libraries just by placing
 nor can the Loader class in PHP 4.  All other classes are able to be replaced/extended.</p>
 
 
-<h2>Storage</h2>
+<h2>存檔位置</h2>
 
-<p>Your library classes should be placed within your <dfn>application/libraries</dfn> folder，as this is where CodeIgniter will look for them when
-they are initialized.</p>
+<p>自己建立的類別函數可以存放在 <dfn>application/libraries</dfn> 資料夾，當 CodeIgniter 必須初始化建立類別函數，系統就會來此資料夾查詢並且載入.</p>
 
 
 <h2>命名規則</h2>
