--- a/overview/features.html
+++ b/overview/features.html
@@ -65,37 +65,37 @@ The only way to really judge an app is to try it and get to know the code. <a hr
 CodeIgniter is child's play so we encourage you to do just that.  In the mean time here's a list of CodeIgniter's main features.</p>
 
 <ul>
-<li>模型(Model)-檢視(View)-控制器(Controller) Based System</li>
+<li>基本 模型(Model)-檢視(View)-控制器(Controller) 系統</li>
 <li>相容於 PHP 4 系統</li>
-<li>Extremely Light Weight</li>
+<li>超輕量級</li>
 <li>Full Featured database classes with support for several platforms.</li>
-<li>Active Record Database Support</li>
-<li>表單與資料驗證模組</li>
-<li>安全性與過濾XSS攻擊</li>
+<li>Active Record 資料庫支援</li>
+<li>表單與資料驗證類別</li>
+<li>安全性與XSS過濾攻擊</li>
 <li>Session 管理</li>
-<li>電子郵件(E-mail)模組。支援附加檔案，存文字檔(text)或者是網頁檔(html)傳送，支援多重協定 (sendmail，SMTP，and Mail) 等。</li>
+<li>電子郵件(E-mail)類別。支援附加檔案，存文字檔(text)或者是網頁檔(html)傳送，支援多重協定 (sendmail，SMTP，and Mail) 等更多。</li>
 <li>Image Manipulation Library (cropping，resizing，rotating，etc.).  Supports GD，ImageMagick，and NetPBM</li>
-<li>檔案上傳模組</li>
-<li>FTP 模組</li>
+<li>檔案上傳類別</li>
+<li>FTP 類別</li>
 <li>Localization</li>
-<li>Pagination</li>
+<li>資料分頁類別</li>
 <li>資料加密</li>
 <li>Benchmarking</li>
-<li>Full 網頁快取</li>
+<li>網頁快取</li>
 <li>錯誤紀錄</li>
 <li>Application Profiling</li>
 <li>Scaffolding</li>
 <li>日曆(Calendaring)類別</li>
-<li>User Agent Class</li>
-<li>Zip Encoding Class</li>
-<li>Template Engine Class</li>
+<li>User Agent 類別</li>
+<li>Zip 編碼類別</li>
+<li>樣板引擎類別</li>
 <li>Trackback Class</li>
 <li>XML-RPC Library</li>
 <li>Unit Testing Class</li>
 <li>Search-engine Friendly URLs</li>
 <li>Flexible URI Routing</li>
 <li>Support for Hooks，Class Extensions，and Plugins</li>
-<li>Large library of "helper" functions</li>
+<li>大量的補助函數</li>
 </ul>
 
 
