--- a/general/plugins.html
+++ b/general/plugins.html
@@ -68,7 +68,7 @@ directory.  If the directory does not exist or the specified plugin is not locat
 <dfn>system/plugins</dfn> folder.</p>
 
 
-<h2>Loading a Plugin</h2>
+<h2>載入外掛模組</h2>
 
 <p>Loading a plugin file is quite simple using the following function:</p>
 
