--- a/overview/appflow.html
+++ b/overview/appflow.html
@@ -81,7 +81,7 @@
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="features.html">CodeIgniter 的功能</a>
+上個主題:&nbsp;&nbsp;<a href="features.html">CodeIgniter 支援功能</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
