--- a/overview/features.html
+++ b/overview/features.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CodeIgniter 的功能 : CodeIgniter 使用手冊</title>
+<title>CodeIgniter 支援功能 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Features
+支援功能
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -56,7 +56,7 @@ Features
 <div id="content">
 
 
-<h1>CodeIgniter 的功能</h1>
+<h1>CodeIgniter 支援功能</h1>
 
 <p>Features in and of themselves are a very poor way to judge an application since they tell you nothing
 about the user experience，or how intuitively or intelligently it is designed.  Features
