fixed some typo replacement.

--- a/database/forge.html
+++ b/database/forge.html
@@ -78,7 +78,7 @@ Database Forge Class
 
 <h2><a name="init"></a>Initializing the Forge Class</h2>
 
-<p class="important"><strong>非常重要::</strong>&nbsp; In order to initialize the Forge class，your database driver must
+<p class="important"><strong>非常重要:</strong>&nbsp; In order to initialize the Forge class，your database driver must
 already be running，since the forge class relies on it.</p>
 
 <p>Load the Forge Class as follows:</p>
