--- a/doc_style/index.html
+++ b/doc_style/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Writing Documentation : CodeIgniter 使用手冊</title>
+<title>撰寫文件 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Writing Documentation
+撰寫文件
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@ Writing Documentation
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Writing Documentation</h1>
+<h1>撰寫文件</h1>
 
 <p>To help facilitate a consistent，easy-to-read documentation style for CodeIgniter projects，Ellislab is making the markup and CSS from the CodeIgniter user guide freely available to the community for their use. For your convenience，a template file has been created that includes the primary blocks of markup used with brief samples.</p>
 
