--- a/general/profiling.html
+++ b/general/profiling.html
@@ -64,7 +64,7 @@ This information can be useful during development in order to help with debuggin
 
 <h2>Initializing the Class</h2>
 
-<p class="important"><strong>非常重要::</strong>&nbsp; This class does <kbd>NOT</kbd> need to be initialized. It is loaded automatically by the
+<p class="important"><strong>非常重要:</strong>&nbsp; This class does <kbd>NOT</kbd> need to be initialized. It is loaded automatically by the
 <a href="../libraries/output.html">Output 類別</a> if profiling is enabled as shown below.</p>
 
 <h2>Enabling the Profiler</h2>
