--- a/general/routing.html
+++ b/general/routing.html
@@ -124,7 +124,7 @@ Higher routes will always take precedence over lower ones.</p>
 <code>$route['product/(:num)'] = "catalog/product_lookup_by_id/$1";</code>
 <p>A URL with "product" as the first segment，and anything in the second will be remapped to the "catalog" class and the "product_lookup_by_id" method passing in the match as a variable to the function.</p>
 
-<p class="important"><strong>非常重要::</strong> Do not use leading/trailing slashes.</p>
+<p class="important"><strong>非常重要:</strong> Do not use leading/trailing slashes.</p>
 
 <h2>Regular Expressions</h2>
 
@@ -155,7 +155,7 @@ are encouraged to always have a default route otherwise a 404 page will appear b
 <p>This route lets you set a secret word，which when present in the URL，triggers the scaffolding feature.
 Please read the <a href="scaffolding.html">Scaffolding</a> page for details.</p>
 
-<p class="important"><strong>非常重要::</strong>&nbsp; The reserved routes must come before any wildcard or regular expression routes.</p>
+<p class="important"><strong>非常重要:</strong>&nbsp; The reserved routes must come before any wildcard or regular expression routes.</p>
 
 </div>
 <!-- END CONTENT -->
