--- a/general/styleguide.html
+++ b/general/styleguide.html
@@ -678,7 +678,7 @@ $query = $this->db->query("SELECT foo，bar，baz，foofoo，foobar AS raboof，
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="../doc_style/index.html">Writing Documentation</a>
+下個主題:&nbsp;&nbsp;<a href="../doc_style/index.html">撰寫文件</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
