--- a/libraries/output.html
+++ b/libraries/output.html
@@ -74,7 +74,7 @@ It is possible，however，for you to manually intervene with the output if you 
 
 <code>$this->output->set_output($data);</code>
 
-<p><strong>非常重要::</strong> If you do set your output manually，it must be the last thing done in the function you call it from.
+<p><strong>非常重要:</strong> If you do set your output manually，it must be the last thing done in the function you call it from.
 For example，if you build a page in one of your controller functions，don't set the output until the end.</p>
 
 
