--- a/toc.html
+++ b/toc.html
@@ -115,7 +115,7 @@
 	<li><a href="./general/alternative_php.html">Alternative PHP Syntax</a></li>
 	<li><a href="./general/security.html">安全性</a></li>
 	<li><a href="./general/styleguide.html">PHP 樣式指南</a></li>	
-	<li><a href="./doc_style/index.html">Writing Documentation</a></li>
+	<li><a href="./doc_style/index.html">撰寫文件</a></li>
 </ul>
 
 </td>
