--- a/general/security.html
+++ b/general/security.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Security : CodeIgniter 使用手冊</title>
+<title>安全性 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Security
+安全性
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,13 +55,13 @@ Security
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Security</h1>
+<h1>安全性</h1>
 
 <p>This page describes some "最佳實證" regarding web security，and details
 CodeIgniter's internal security features.</p>
 
 
-<h2>URI Security</h2>
+<h2>URI 安全性</h2>
 
 <p>CodeIgniter is fairly restrictive regarding which characters it allows in your URI strings in order to help
 minimize the possibility that 惡意資料 can be passed to your application.  URIs may only contain the following:
