--- a/general/styleguide.html
+++ b/general/styleguide.html
@@ -674,7 +674,7 @@ $query = $this->db->query("SELECT foo，bar，baz，foofoo，foobar AS raboof，
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="security.html">Security</a>
+上個主題:&nbsp;&nbsp;<a href="security.html">安全性</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
