--- a/general/helpers.html
+++ b/general/helpers.html
@@ -86,7 +86,7 @@ directory.  If the directory does not exist or the specified helper is not locat
 
 <code>$this->load->helper('<var>url</var>');</code>
 
-<p>A helper can be loaded anywhere within your controller functions (or even within your View files，although that's not a good practice),
+<p>A helper can be loaded anywhere within your controller functions (或說在你的 View files 裡頭，although that's not a good practice),
 as long as you load it before you use it.  You can load your helpers in your controller constructor so that they become available
 automatically in any function，or you can load a helper in a specific function that needs it.</p>
 
