--- a/libraries/parser.html
+++ b/libraries/parser.html
@@ -61,7 +61,7 @@ Template Parser 類別
 <h1>Template Parser 類別</h1>
 
 <p>The Template Parser 類別 enables you to parse pseudo-variables contained within your view files. It can parse simple
-variables or variable tag pairs. If you've never used a template engine，pseudo-variables look like this:</p>
+variables or variable tag pairs. If you've never used a 樣板引擎(template engine)，pseudo-variables look like this:</p>
 
 <code>&lt;html&gt;<br />
 &lt;head&gt;<br />
@@ -83,7 +83,7 @@ variables or variable tag pairs. If you've never used a template engine，pseudo
 PHP from your templates (view files).</p>
 
 <p class="important"><strong>注意:</strong> CodeIgniter does <strong>not</strong> require you to use this class
-since using pure PHP in your view pages lets them run a little faster.  However，some developers prefer to use a template engine if
+since using pure PHP in your view pages lets them run a little faster.  However，some developers prefer to use a 樣板引擎(template engine) if
 they work with designers who they feel would find some confusion working with PHP.</p>
 
 <p><strong>Also 注意:</strong> The Template Parser 類別 is <strong>not</strong>  a
