Alternative PHP Syntax

--- a/toc.html
+++ b/toc.html
@@ -112,7 +112,7 @@
 	<li><a href="./general/caching.html">快取</a></li>
 	<li><a href="./general/profiling.html">Profiling Your Application</a></li>
 	<li><a href="./general/managing_apps.html">管理 Applications</a></li>
-	<li><a href="./general/alternative_php.html">Alternative PHP Syntax</a></li>
+	<li><a href="./general/alternative_php.html">變換 PHP 句法</a></li>
 	<li><a href="./general/security.html">安全性</a></li>
 	<li><a href="./general/styleguide.html">PHP 樣式指南</a></li>	
 	<li><a href="./doc_style/index.html">撰寫文件</a></li>
