--- a/general/managing_apps.html
+++ b/general/managing_apps.html
@@ -124,7 +124,7 @@ calls the desired application.  The index.php file can be named anything you wan
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="alternative_php.html">Alternative PHP Syntax</a>
+下個主題:&nbsp;&nbsp;<a href="alternative_php.html">變換 PHP 句法</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
