--- a/general/reserved_names.html
+++ b/general/reserved_names.html
@@ -57,8 +57,8 @@
 
 <h1>保留字</h1>
 
-<p>In order to help out，CodeIgniter uses a series of functions and names in its operation. Because of this，some names cannot be used by a developer. 底下列的是不能使用的保留字。</p>
-<h3>Controller names</h3>
+<p>為了維持 CodeIgniter 自身的運作正常，所以使用了些函數和命名。 因此，某些名稱無法供開發者使用。 底下列的是不能使用的保留字。</p>
+<h3>控制器名稱(Controller names)</h3>
 <p>Since your controller classes will extend the main application controller you
 must be careful not to name your functions identically to the ones used by that class，otherwise your local functions
 will override them.  底下列了些保留字，可別把你的控制器函數(Controller Function)命名成底下的名稱:</p>
@@ -99,7 +99,7 @@ will override them.  底下列了些保留字，可別把你的控制器函數(C
 	<li>_ci_load_class</li>
 	<li>_ci_object_to_array</li>
 </ul>
-<h3>Functions</h3>
+<h3>函數(Functions)</h3>
 <ul>
 	<li>is_really_writable()</li>
 	<li>load_class()</li>
@@ -111,13 +111,13 @@ will override them.  底下列了些保留字，可別把你的控制器函數(C
 	<li>_exception_handler()</li>
 	<li>get_instance()</li>
 	</ul>
-<h3>Variables</h3>
+<h3>變數(Variables)</h3>
 <ul>
 	<li>$config</li>
 	<li>$mimes</li>
 	<li>$lang</li>
 </ul>
-<h3>Constants</h3>
+<h3>常數(Constants)</h3>
 <ul>
 	<li>EXT</li>
 	<li>FCPATH</li>
