fixed some replacements.

--- a/database/caching.html
+++ b/database/caching.html
@@ -129,7 +129,7 @@ controller function that serves up your comments.  You'll find two delete functi
 clear data.</p>
 
 
-<h2>Not All Database 函數(函數(Functions)) Work with Caching</h2>
+<h2>Not All Database Functions Work with Caching</h2>
 
 <p>Lastly，we need to point out that the result object that is cached is a simplified version of the full result object. For that reason,
 some of the query result functions are not available for use.</p>
