--- a/database/index.html
+++ b/database/index.html
@@ -68,7 +68,7 @@ structures and Active Record patterns. The database functions offer clear，simp
 		<li><a href="connecting.html">Connecting to a Database</a></li>
 		<li><a href="queries.html">Running Queries</a></li>
 		<li><a href="results.html">Generating Query Results</a></li>
-		<li><a href="helpers.html">Query 補助函數 函數(函數(Functions))</a></li>
+		<li><a href="helpers.html">Query 補助函數</a></li>
 		<li><a href="active_record.html">Active Record Class</a></li>
 		<li><a href="transactions.html">Transactions</a></li>
 		<li><a href="table_data.html">Table MetaData</a></li>
