--- a/general/autoloader.html
+++ b/general/autoloader.html
@@ -93,7 +93,7 @@ type of item.</p>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="common_functions.html">通用函數(通用函數(Common 函數(函數(Functions))))</a></p>
+下個主題:&nbsp;&nbsp;<a href="common_functions.html">通用函數(Common Functions)</a></p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
