--- a/general/controllers.html
+++ b/general/controllers.html
@@ -63,7 +63,7 @@
 <ul>
 <li><a href="#what">什麼是控制器(Controller)呢?</a></li>
 <li><a href="#hello">我們的第一個程式:  Hello World!<a></li>
-<li><a href="#functions">函數(Functions))</a></li>
+<li><a href="#functions">函數(Functions)</a></li>
 <li><a href="#passinguri">傳遞 URL 段落到你的函數裡</a></li>
 <li><a href="#default">定義預設的控制器</a></li>
 <li><a href="#remapping">重新對映函數呼叫</a></li>
