--- a/general/scaffolding.html
+++ b/general/scaffolding.html
@@ -136,7 +136,7 @@ database functions.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="common_functions.html">通用函數(通用函數(Common 函數(函數(Functions))))</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+上個主題:&nbsp;&nbsp;<a href="common_functions.html">通用函數(Common Functions)</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 下個主題:&nbsp;&nbsp;<a href="routing.html">URI Routing</a></p>
