--- a/helpers/compatibility_helper.html
+++ b/helpers/compatibility_helper.html
@@ -80,7 +80,7 @@ Compatibility 補助函數
 <h3>PHP_EOL</h3>
 <p>The newline character for the server's current OS，e.g. on Windows systems "\r\n"，on *nix "\n".
 
-<h2>Available 函數(函數(Functions))</h2>
+<h2>Available 函數</h2>
 <p>The following functions are available (see linked PHP documentation for documentation):</p>
 
 <h3><a href="http://us.php.net/manual/en/function.file-put-contents.php">file_put_contents()</a> - The fourth parameter，<var>$context</var>，is not supported.</h3>
