--- a/libraries/form_validation.html
+++ b/libraries/form_validation.html
@@ -501,7 +501,7 @@ permit you to re-populate &lt;select> menus，radio buttons，and checkboxes.</p
 
 
 <a name="callbacks"></a>
-<h2>Callbacks: Your own Validation 函數(函數(Functions))</h2>
+<h2>Callbacks: Your own Validation Functions</h2>
 
 <p>The validation system supports callbacks to your own validation functions.  This permits you to extend the validation class
 to meet your needs.  For example，if you need to run a database query to see if the user is choosing a unique username，you can
@@ -867,7 +867,7 @@ class <kbd>Member</kbd> extends Controller {<br />
 
 <code>&lt;input type="text" name="<kbd>options[]</kbd>" value="" size="50" /></code>
 
-<p>If you do use an array as a field name，you must use the EXACT array name in the <a href="#helperreference">補助函數 函數(函數(Functions))</a> that require the field name,
+<p>If you do use an array as a field name，you must use the EXACT array name in the <a href="#helperreference">補助函數(Helper Functions)</a> that require the field name,
 and as your Validation Rule field name.</p>
 
 <p>For example，to set a rule for the above field you would use:</p>
