--- a/general/common_functions.html
+++ b/general/common_functions.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>通用函數(通用函數(Common 函數(函數(Functions)))) : CodeIgniter 使用手冊</title>
+<title>通用函數(Common Functions) : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>通用函數(Common 函數(函數(Functions)))</h1>
+<h1>通用函數(Common Functions)</h1>
 
 <p>CodeIgniter uses a few functions for its operation that are globally defined，and are available to you at any point. These do not require loading any libraries or helpers.</p>
 <h2>is_really_writable('<var>path/to/file</var>')</h2>
