add additional resources

--- a/toc.html
+++ b/toc.html
@@ -182,7 +182,8 @@
 <h3>更多資源</h3>
 
 <ul>
-<li><a href="http://www.codeigniter.com.tw/forums/">社群論壇</a></li>
+<li><a href="http://www.codeigniter.com.tw/forum/">社群論壇(中文)</a></li>
+<li><a href="http://www.codeigniter.com/forums/">社群論壇(英)</a></li>
 <li><a href="http://www.codeigniter.com.tw/wiki/">社群 wiki</a></li>
 </ul>
 
