--- a/overview/getting_started.html
+++ b/overview/getting_started.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>開始使用 With CodeIgniter : CodeIgniter 使用手冊</title>
+<title>開始使用 CodeIgniter : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>開始使用 With CodeIgniter</h1>
+<h1>開始使用 CodeIgniter</h1>
 
 <p>任何的軟體程式都需要花先精力去學習，我們已經盡力的最小化學習曲線，並且進可能讓學習過程可以充滿快樂。</p>
 
