table of content wiki part

--- a/toc.html
+++ b/toc.html
@@ -184,7 +184,7 @@
 <ul>
 <li><a href="http://www.codeigniter.com.tw/forum/">社群論壇(中文)</a></li>
 <li><a href="http://www.codeigniter.com/forums/">社群論壇(英)</a></li>
-<li><a href="http://www.codeigniter.com.tw/wiki/">社群 wiki</a></li>
+<li><a href="http://www.codeigniter.com/wiki/">社群 wiki</a></li>
 </ul>
 
 
