--- a/overview/appflow.html
+++ b/overview/appflow.html
@@ -65,7 +65,7 @@
 
 <ol>
 <li>index.php 供做前端的控制器(controller)，載入執行 CodeIgniter 所需的基本的資源。</li>
-<li>Routering 檢驗 HTTP request 來決定有哪些東西需要被處理。</li>
+<li>Routing 檢驗 HTTP request 來決定有哪些東西需要被處理。</li>
 <li>假如快取檔(cacheing file)存在的話，他會直接把快去送給瀏覽器，跳過後續正常的處理。</li>
 <li>Security 是在應用程式控制器(application controller)被載入之前，由 HTTP request 以及任何使用者送出的資料，都會在 security 進行過慮。</li>
 <li>應用程式控制器(application controller)則負責載入各種不同的 request 所需的模型(model)、核心函式庫(core libraries)、plugins、補助函數(helpers)、以及所有其他資源等。</li>
