--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>歡迎來到 codeIgniter 的世界 : CodeIgniter 使用手冊</title>
+<title>歡迎來到 CodeIgniter 的世界 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='userguide.css' />
@@ -57,7 +57,7 @@
 
 
 
-<h2>歡迎來到 codeIgniter 的世界</h2>
+<h2>歡迎來到 CodeIgniter 的世界</h2>
 
 <p>CodeIgniter 是開發 PHP 應用程式的 framework 及工具組。提供簡易的介面和邏輯結構來使用豐富的函式庫，其目的是讓你可以加
 快開發速度。使用 CodeIgniter 只需要寫少少的程式，讓創造力可專注在專案開發。</p>
