alternative php paragraph 1 fixed

--- a/general/alternative_php.html
+++ b/general/alternative_php.html
@@ -57,7 +57,7 @@
 
 <h1>Views 檔變換 PHP 句法</h1>
 
-<p>如果你不使用 CodeIgniter's <a href="../libraries/parser.html">樣板引擎(template engine)</a>，就得在 View files 用純 PHP 句法
+<p>如果你不使用 CodeIgniter 的 <a href="../libraries/parser.html">樣板引擎(template engine)</a>，就得在 View files 用純 PHP 句法
 。為了最少化 PHP 程式碼在這檔案中的比重，以及要讓 View files 可以比較簡單的辨識出程式碼區塊，我們會建議你使用變換 PHP 句法的功能
 ，這樣就可以利用較簡易的控制結構以及 short tag 語法。如果你不熟悉這些句法，你也能把那些句法從你的程式碼踢掉以及趕走 echo 的用法。
 </p>
