--- a/general/alternative_php.html
+++ b/general/alternative_php.html
@@ -59,7 +59,7 @@
 
 <p>如果你不使用 CodeIgniter 的 <a href="../libraries/parser.html">樣板引擎(template engine)</a>，就得在 View files 用純 PHP 句法
 。為了最少化 PHP 程式碼在這檔案中的比重，以及要讓 View files 可以比較簡單的辨識出程式碼區塊，我們會建議你使用變換 PHP 句法的功能
-，這樣就可以利用較簡易的控制結構以及 short tag 語法。如果你不熟悉這些句法，你也能把那些句法從你的程式碼踢掉以及趕走 echo 的用法。
+，這樣就可以利用較簡易的控制結構以及 short tag 語法。如果你不熟悉這些句法，你也可以選擇不要使用。。
 </p>
 
 <h2>自動支援 Short Tag</h2>
