--- a/general/urls.html
+++ b/general/urls.html
@@ -124,9 +124,11 @@ $config['function_trigger'] = 'm';</code>
 
 <code>index.php?c=controller&amp;m=method</code>
 
-<p class="important"><strong>請注意:</strong> If you are using query strings you will have to build your own URLs，rather than utilizing
-the URL helpers (and other helpers that generate URLs，like some of the form helpers) as these are designed to work with
-segment based URLs.</p>
+<p class="important"><strong>請注意:</strong> 
+如果你堅持要使用 query strings 而不使用 URL 補助函數的話，你就必須要建立自己的 URLs。因為當初我們
+進行設計某些補助函數的時候，就是採用分段式的 URLs，像是些會自建 URLs 的補助函數以及 form 補助函數
+都是使用分段式的 URLs 設計。
+</p>
 
 
 </div>
