--- a/installation/index.html
+++ b/installation/index.html
@@ -67,7 +67,7 @@
 </ol>
 
 <p>
-如果你想要增加安全性的話，你可以把 Codeigniter 裡頭的 <dfn>system</dfn> 改名成安全的名字。如果改名之後，你必須編輯 <kbd>index.php</kbd> ，並且把檔案裡頭最上面的 <samp>$system_folder</samp> 變數，改成你修改後的名字。</p>
+如果你想要增加安全性的話，你可以把 CodeIgniter 裡頭的 <dfn>system</dfn> 改名成安全的名字。如果改名之後，你必須編輯 <kbd>index.php</kbd> ，並且把檔案裡頭最上面的 <samp>$system_folder</samp> 變數，改成你修改後的名字。</p>
 
 <p>大功告成！</p>
 
